@@ -2334,7 +2334,7 @@ class ModifyHeader(Wizard):
         Line = pool.get('purchase.line')
 
         purchase = self.get_purchase()
-        values = self.start._save_values
+        values = self.start._save_values()
         self.model.write([purchase], values)
         self.model.log([purchase], 'write', ','.join(sorted(values.keys())))
 
