@@ -2411,7 +2411,7 @@ class ModifyHeader(Wizard):
         Line = pool.get('sale.line')
 
         sale = self.get_sale()
-        values = self.start._save_values
+        values = self.start._save_values()
         self.model.write([sale], values)
         self.model.log([sale], 'write', ','.join(sorted(values.keys())))
 
